--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,127 @@
-<html><body> Hello World. I wish Ada was coming to CPH</body></html>
+<!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <!-- Metadata goes here -->
+        <title>Lyd's Travel Blog!</title>
+        <meta charset='UTF-8'/>
+    </head>
+    <body>
+        <!-- Content goes here -->
+        
+
+        <h2>Lists</h2>
+        <p>This is how you make an unordered list:</p>
+        <ul>
+            <li>Add a "ul" element (it stands for unordered list)</li>
+            <li>Add each item in its own "li" element</li>
+            <li>They don't need to be in any particular order</li>
+        </ul>
+
+        <p>This is what an ordered list looks like:</p>
+        <ol>
+            <li>Notice the new "ol" element wrapping everything</li>
+            <li>But, the list item elements are the same</li>
+            <li>Also note how the numbers increment on their own</li>
+            <li>You should be noticing things is this precise order, because this is
+            an ordered list</li>
+        </ol>
+
+        <h2>Inline Elements</h2>
+        <p><em>Sometimes</em>, you need to draw attention to a particular word or
+        phrase.</p>
+        <p>Other times you need to <strong>strong</strong>ly emphasize the importance
+        of a word or phrase.</p>
+        <p>Regards,<br/>
+        The Authors</p>
+    </body>
+</html>
+
+
+<!--LINKS PAGE-->
+<!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <title>Links</title>
+        <meta charset='UTF-8'/>
+    </head>
+    <body>
+        <h1>Links</h1>
+        <p>This example is about links and <a href='images.html'>images</a>.</p>
+        <p>This particular page is about links! There are three kinds of links:</p>
+        <ul>
+            <!-- Add <li> elements here -->
+            <li>Absolute links, like to
+                <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>Mozilla
+                Developer Network</a>, which is a very good resource for web
+                developers.</li>
+            <li>Relative links, like to our <a href='misc/extras.html'>extras
+                page</a>.</li>
+            <li>Root-relative links, like to the <a href='/'>home page</a> of our website,
+                but those aren't useful to us right now.</li>
+        </ul>
+        
+    </body>
+</html>
+
+
+<!-- images page-->
+<!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <title>Images</title>
+        <meta charset='UTF-8'/>
+    </head>
+    <body>
+        <h1>Images</h1>
+
+        <p>This page covers common image formats, but you may also be looking for <a
+            href='links.html'>links</a> and <a href='misc/extras.html'>useful
+            extras</a>.</p>
+        <h2>JPGs</h2>
+        <p>JPG images are good for photos.</p>
+        <img src='images/mochi.jpg'/>
+        <!-- In JPGs section -->
+        <img src='images/mochi.jpg' width='75'/>
+        <!-- In JPGs section -->
+        <img src='images/mochi.jpg' width='75' alt='A mochi ball in a bubble'/>
+
+        <h2>GIFs</h2>
+        <p>GIFs are good for animations.</p>
+        <img src='images/mochi.gif'/>
+        <!-- In GIFs section -->
+        <img src='images/mochi.gif' width='75'/>
+        <img src='images/mochi.gif' width='75' alt='A dancing mochi ball'/>
+
+        <h2>PNGs</h2>
+        <p>PNGs are good for diagrams and icons.</p>
+        <img src='images/mochi.png'/>
+        <!-- In PNGs section -->
+        <img src='images/mochi.png' width='75'/>
+        <img src='images/mochi.png' width='75' alt='A mochi ball'/>
+
+        <h2>SVGs</h2>
+        <p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
+        <img src='images/mochi.svg'/>
+        <img src='images/mochi.svg' alt='A mochi ball with Bézier handles'/>
+
+    </body>
+</html>
+
+<!--extras page-->
+<html lang='en'>
+    <head>
+        <title>Extras</title>
+        <meta charset='UTF-8'/>
+    </head>
+    <body>
+        <h1>Extras</h1>
+        <p>This page is about miscellaneous HTML things, but you may also be
+                interested in <a href='../links.html'>links</a> or <a
+                href='../images.html'>images</a>.</p>
+        <h2>HTML Entities</h2>
+        <p>There are three reserved characters in HTML: &lt; &gt; and &amp;. You
+                should always use HTML entities for these three characters.</p>
+        <p>If you&rsquo;re into &ldquo;web typography,&rdquo; you&rsquo;ll also find
+                yourself using curly quotes quite a bit.</p>
+    </body>
+</html>
