--- a/public/about-me.html
+++ b/public/about-me.html
@@ -2,10 +2,11 @@
 <html lang='en'>
     <head>
         <!-- Metadata goes here -->
-        <title>About Lyd</title>
+        <title>Lyd's Adventures - About</title>
         <meta charset='UTF-8'/>
     </head>
     <body>
-        
+        <h1>About Lyd</h1>
+
     </body>
 </html>
