--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <head>
         <!-- Metadata goes here -->
-        <title>Lyd's Bucket List</title>
+        <title>Lyd's Adventures - Bucket List</title>
         <meta charset='UTF-8'/>
     </head>
     
 
     <body>
-
+        <h1>Lyd's Bucket List</h1>
+        <h2>10 things I wish to do during my Maymester in Europe:</h2>
+        <ol>
+            <li><a href='https://pancakes.amsterdam/' target='_blank'>Eat Dutch Pancakes at Pancakes Amsterdam</a></li>
+        </ol>
     </body>
 </html>
