--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
         <title>Lyd's Adventures</title>
         <meta charset='UTF-8'/>
     </head>
-    
 
     <body>
-
+        <h1>Blogs</h1>
+        
     </body>
 </html>
