--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Blogs</h1>
-        
+        <p><a href='/bucket-list.html'>Lyd's Bucket List</a></p>
+        <p><a href='/about-me.html'>About Lyd</a></p>
+
+
+
     </body>
 </html>
