--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -18,8 +18,9 @@
             <li><a href='https://www.danishnet.com/food/' target='_blank'>Grocery Shop and cook the Danish way (the best I can)</a></li>
             <li><a href='https://en.wikipedia.org/wiki/Freetown_Christiania' target='_blank'>Visit Freetown Christiania</a></li>
             <li><a href='https://www.visitcopenhagen.com/copenhagen/gastronomy/top-10-bakeries' target='_blank'>Visit many Danish Bakeries</a></li>
-            <li><a href='https://www.therooftopguide.com/rooftop-bars-in-copenhagen.html' target='_blank'>Eat/drink at a rooftop restaurant/bar with a good view of the city</a></li>
+            <li><a href='https://www.therooftopguide.com/rooftop-bars-in-copenhagen.html' target='_blank'>Drink at a rooftop bar with a good view of the city</a></li>
             <li><a href='https://www.visitcopenhagen.com/copenhagen/nyhavn-gdk474735' target='_blank'>Visit Nyhavn</a></li>
         </ol>
+        <img/>
     </body>
 </html>
