--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,41 @@
 
     <body>
         <h1>Blogs</h1>
+
+        <h2>The week before my Maymester in Copenhagen</h2>
+        <p>May 14, 2019</p>
+        <p>I am currently sitting in the Heathrow airport in London writing this blog post. 
+            These readings have taken a suprisingly long time to complete as 
+            I have been working on them throughout my travel journey. Unfortunately between finals 
+            and 15 of my friends graduating, I have not had a moment to work on this until now so I'm scrambling a bit.
+            I am working on this now as I wait for my connecting flight to Amsterdam with my partner, Thomas. 
+            He just graduated from UNC and we are traveling the week before my Maymester to celebrate together 
+            before he moves to Boston.Together we are going to Amsterdam, Brussels, Bruges, and Copenhagen. 
+            We plan to celebrate my 21st birthday in Amsterdam and Brussels. 
+            We are meeting my best friend, Eva, in Copenhagen. Eva has been studying abroad in Spain all semester
+            so I am so excited to reunite and spend some time with her. </p>
+        <p>Eva, Thomas and I will be together in Copenhagen for three days before the Maymester program starts.
+            Then Eva and Thomas will travel to Budapest together before Eva returns back to NC. After Budapest, 
+            Thomas is planning to backpack alone to many other cities starting with Vienna. As of now he is planning to then 
+            go to Munich, Florence, Rome, Como, Paris, London. It will be quite the adventure for him! At the end of my 
+            program in Copenhagen, I plan to visit my friend and soon to be roommate, Lizzie, in London for a day before 
+            I fly back home to start my summer internship in NC.</p>
+        <p> So this is my introductory blog post about my general plans for before and after this Maymester begins. 
+            I am beyond excited for everything that this program will entail and will 
+            definitely be updating this page with more blogs to include much more detail later. 
+            Lastly, here is a list of all the cities I hope to visit in the next month:  </p>
+
+        <ul>
+            <li>Amsterdam</li>
+            <li>Brussels</li>
+            <li>Bruges</li>
+            <li>Copenhagen</li>
+            <li>Either Stockholm, Gothenburg, or Hamburg</li>
+            <li>London</li>
+        </ul>
+
         <p><a href='/bucket-list.html'>Lyd's Bucket List</a></p>
         <p><a href='/about-me.html'>About Lyd</a></p>
-
-
 
     </body>
 </html>
