--- a/public/notes.html
+++ b/public/notes.html
@@ -4,6 +4,7 @@
         <!-- Metadata goes here -->
         <title>Lyd's Travel Blog!</title>
         <meta charset='UTF-8'/>
+        <link rel='stylesheet' href='styles.css'/>
     </head>
     <body>
         <!-- Content goes here -->
@@ -82,11 +83,10 @@
         <img src='images/mochi.jpg'/>
         <!-- In JPGs section -->
         <img src='images/mochi.jpg' width='75'/>
-        <!-- In JPGs section -->
         <img src='images/mochi.jpg' width='75' alt='A mochi ball in a bubble'/>
 
         <h2>GIFs</h2>
-        <p>GIFs are good for animations.</p>
+        <p>GIFs are good for animations. </p>
         <img src='images/mochi.gif'/>
         <!-- In GIFs section -->
         <img src='images/mochi.gif' width='75'/>
