--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -4,6 +4,7 @@
         <!-- Metadata goes here -->
         <title>Lyd's Adventures - Bucket List</title>
         <meta charset='UTF-8'/>
+        <link rel='stylesheet' href='styles.css'/>
     </head>
     
     <body>
