some css m.fdjk

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
         <title>Lyd's Adventures</title>
         <meta charset='UTF-8'/>
         <link rel='stylesheet' href='styles.css'/>
-        <style>
+        <!-- <style>
             body {
             background-color: rgb(128, 128, 223); /* Blue */
         }
-        </style>
+        </style> -->
     </head>
 
     <body>
