some css m.fdjk

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -14,7 +14,7 @@
             with the planning of the UNC CS Diversity Panel event at each semester. After my time in Copenhagen, I 
             will be returning to North Carolina to intern at Fidelity Investments in Durham this summer. 
         </p>
-        <p> On a lighter note, here is a list of my interests:</p>
+        <p> <span> On a lighter note, here is a list of my interests: </span></p>
         <ul>
             <li>Dogs.. and lately cats too</li>
             <li>skiing, both snow and water</li>
