some css m.fdjk

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -20,7 +20,7 @@
             <li>skiing, both snow and water</li>
             <li>volleyball...though I may be rusty these days</li>
             <li>espresso</li>
-            <li>Chick-Fil-A sauce</li>
+            <li><span><strong>Chick-Fil-A sauce</strong></span></li>
             <li>Game of Thrones (ofc)</li>
             <li>Broad City (fav show of all time)</li>
             <li>hiking and camping</li>
