some css m.fdjk

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     </head>
 
     <body>
-        <h1>Blogs</h1>
+    <div class='page'>
+       <div class='big-title'><h1>Blogs</h1></div>
 
         <h2>The week before my Maymester in Copenhagen</h2>
         <p>May 14, 2019</p>
@@ -24,7 +25,7 @@
             I am working as I wait for my connecting flight to Amsterdam with my partner, Thomas. 
             He just graduated from UNC and we are traveling the week before my Maymester to celebrate together 
             before he moves to Boston. Together we are going to Amsterdam, Brussels, Bruges, and Copenhagen. 
-            We plan to celebrate my 21st birthday in Amsterdam and Brussels. 
+            <strong>We plan to celebrate my 21st birthday in Amsterdam and Brussels.</strong>
             We are meeting my best friend, Eva, in Copenhagen. Eva has been studying abroad in Spain all semester
             so I am so excited to reunite and spend some time with her. </p>
         <p>Eva, Thomas and I will be together in Copenhagen for three days before my Maymester program starts.
@@ -49,6 +50,6 @@
 
         <p><a href='/bucket-list.html'>Lyd's Bucket List</a></p>
         <p><a href='/about-me.html'>About Lyd</a></p>
-
+    </div>
     </body>
 </html>
