some css m.fdjk

--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -10,8 +10,8 @@
     <body>
         <h1>Lyd's Bucket List</h1>
         <h2>10 things I wish to do during my Maymester in Europe:</h2>
-        <ol>
-            <li><a href='https://pancakes.amsterdam/' target='_blank'>Eat Dutch Pancakes at Pancakes Amsterdam</a></li>
+        <ol class='listtt'>
+            <li><a class='lib' href='https://pancakes.amsterdam/' target='_blank'>Eat Dutch Pancakes at Pancakes Amsterdam</a></li>
             <li><a href='https://www.omio.com/trains' target='_blank'>Visit either Stockholm, Gothenburg or Hamburg by train</a></li>
             <li><a href='https://en.wikipedia.org/wiki/Royal_Library,_Denmark' target='_blank'>Work on this website at the Royal Library</a></li>
             <li><a href='https://www.visitcopenhagen.com/copenhagen/gastronomy/great-coffee-shops-spots' target='_blank'>Visit the coolest coffee shops in Copenhagen</a></li>
