some css m.fdjk

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>About Lyd</h1>
-        <img src='images/me.jpg' width='500'/>
+        <img class='floater' src='images/me.jpg' width='500'/>
         <p>I am a rising senior at UNC double majoring in Computer Science and Information Science with a 
             minor in Spanish for Business. I have been a COMP110 TA for 3 semesters now and am heavily involved 
             with the planning of the UNC CS Diversity Panel event at each semester. After my time in Copenhagen, I 
