some css m.fdjk

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     </head>
 
     <body>
+        <div class='navigate-container'>
+            <div class='navigate'>
+                <div class='home'> <a href='/index.html'>Blog Posts</a></div>
+                <div class='bucket-list'><a href='/bucket-list.html'>Bucket List</a></div>
+                <div class='about-me'><a href='/about-me.html'>About Me</a></div>
+            </div>
+        </div>
+    
     <div class='page'>
        <div class='big-title'><h1>Blogs</h1></div>
 
