--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -8,6 +8,14 @@
     </head>
     
     <body>
+        <div class='navigate-container'>
+                <div class='navigate'>
+                    <div class='home'> <a href='/index.html'>Blog Posts</a></div>
+                    <div class='bucket-list'><a href='/bucket-list.html'>Bucket List</a></div>
+                    <div class='about-me'><a href='/about-me.html'>About Me</a></div>
+                </div>
+        </div>
+
         <h1>Lyd's Bucket List</h1>
         <h2>10 things I wish to do during my Maymester in Europe:</h2>
         <ol class='listtt'>
