--- a/public/about-me.html
+++ b/public/about-me.html
@@ -7,6 +7,14 @@
         <link rel='stylesheet' href='styles.css'/>
     </head>
     <body>
+        <div class='navigate-container'>
+            <div class='navigate'>
+                <div class='home'> <a href='/index.html'>Blog Posts</a></div>
+                <div class='bucket-list'><a href='/bucket-list.html'>Bucket List</a></div>
+                <div class='about-me'><a href='/about-me.html'>About Me</a></div>
+            </div>
+        </div>
+
         <h1>About Lyd</h1>
         <img class='floater' src='images/me.jpg' width='800'/>
         <p>I am a rising senior at UNC double majoring in Computer Science and Information Science with a 
