--- a/public/about-me.html
+++ b/public/about-me.html
@@ -2,6 +2,7 @@
 <html lang='en'>
     <head>
         <!-- Metadata goes here -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <title>Lyd's Adventures - About</title>
         <meta charset='UTF-8'/>
         <link rel='stylesheet' href='styles.css'/>
