--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
     <head>
         <!-- Metadata goes here -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <title>Lyd's Adventures</title>
         <meta charset='UTF-8'/>
         <link rel='stylesheet' href='styles.css'/>
@@ -13,6 +14,11 @@
     </head>
 
     <body>
+        <!-- <script type="text/javascript">
+            let thanker = function(name) {
+                return "Tak very much" + name;
+            }   
+        </script> -->
         <div class='navigate-container'>
             <div class='navigate'>
                 <div class='home'> <a href='/index.html'>Blog Posts</a></div>
@@ -59,5 +65,6 @@
         <p><a href='/bucket-list.html'>Lyd's Bucket List</a></p>
         <p><a href='/about-me.html'>About Lyd</a></p>
     </div>
+        <script src='./demo.js' type="text/javascript"></script>
     </body>
 </html>
