--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,27 @@
             <li>Either Stockholm, Gothenburg, or Hamburg</li>
             <li>London</li>
         </ul>
-
+    </div>
+    <div class="post2?">
+        <p>I have spent 3 days and 3 nights in Copenhagen and I am exhausted so far. This place is a Copenheaven for sure.
+            I got really lucky with 2 days of nearly 70 degrees and sunny perfect weather. I was here with my 2 bffs and they left for
+            Budapest today. How am I feeling? Some honest thoughts
+            1. Burnt out: I am starting to burn out a lil on school bc summer school every session since starting college means very little breaks. 
+            Thus my strategy for this website is do a moderate amount of effort to learn what I need to while here and then to fix this site up nice and pretty
+            over the summer during down time at work. 
+            2. Exhausted: I am an extroverted introvert meaning I NEED alone time in order to be my true self around people. I want to charge up alone and then be around people until my 
+            social battery is low again. After not having ANY alone time for the past 10 days, my social battery is at a 1%. Now that my friends are gone I am going to 
+            take a moment to get back to myself to fully enjoy my time here. Recharge persay.
+            3. Excited: everything is perfect about this place. It stays light out so late(makes me feel safe), our class and dorm location is in a PERFECT spot.I enjoy the different 
+            personalities of everyone in this group a lot, our dorms are huge, espresso is everywhere, public restrooms are so nice
+            4. Nostalgic/emotional/overwhelmed: I'll get real for a moment and talk about today. I cried in the airport saying goodbye to my partner (Thomas). To be fair I am exhausted and cry easily but also
+            I am overwhelmed by our most recent transition. Basically I have spent many parts of almost every day with Thomas for the past year. It's low key caused an issue time management wise but 
+            what are ya gonna do when you're in love ya know? Anyway we went from that to spending 24/7 together (just the 2 of us) for a whole week traveling. Then today, we said goodbye for a hot minute because after this program I will only get to see 
+            him for a dinner and then he moves to Boston. Anyway, I will move past this state of exhaustion and emotionalness after some good sleep so peace out nighty night.
+        </p>
+    </div>
         <p><a href='/bucket-list.html'>Lyd's Bucket List</a></p>
         <p><a href='/about-me.html'>About Lyd</a></p>
-    </div>
         <script src='./demo.js' type="text/javascript"></script>
     </body>
 </html>
