--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
         </ul>
     </div>
     <div class="post2?">
+        <h2>May 21, 2019: Arrival day</h2>
         <p>I have spent 3 days and 3 nights in Copenhagen and I am exhausted so far. This place is a Copenheaven for sure.
             I got really lucky with 2 days of nearly 70 degrees and sunny perfect weather. I was here with my 2 bffs and they left for
             Budapest today. How am I feeling? Some honest thoughts
