need to fix later but responsive start

--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -5,10 +5,13 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <title>Lyd's Adventures - Bucket List</title>
         <meta charset='UTF-8'/>
+        <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
         <link rel='stylesheet' href='styles.css'/>
     </head>
     
     <body>
+        <div class='page'>
         <div class='navigate-container'>
                 <div class='navigate'>
                     <div class='home'> <a href='/index.html'>Blog Posts</a></div>
@@ -32,5 +35,6 @@
             <li><a href='https://www.visitcopenhagen.com/copenhagen/nyhavn-gdk474735' target='_blank'>Visit Nyhavn</a></li>
         </ol>
         <img/>
+        </div>
     </body>
 </html>
