--- a/public/about-me.html
+++ b/public/about-me.html
@@ -5,9 +5,12 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <title>Lyd's Adventures - About</title>
         <meta charset='UTF-8'/>
+        <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
         <link rel='stylesheet' href='styles.css'/>
     </head>
     <body>
+        <div class='page'>
         <div class='navigate-container'>
             <div class='navigate'>
                 <div class='home'> <a href='/index.html'>Blog Posts</a></div>
@@ -36,6 +39,6 @@
             <li>Taylor Swift...always</li>
             <li>Still Woozy (new fav artist)</li>
         </ul>
-
+        </div>
     </body>
 </html>
