--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <title>Lyd's Adventures</title>
         <meta charset='UTF-8'/>
+        <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
         <link rel='stylesheet' href='styles.css'/>
         <!-- <style>
             body {
@@ -14,11 +16,7 @@
     </head>
 
     <body>
-        <!-- <script type="text/javascript">
-            let thanker = function(name) {
-                return "Tak very much" + name;
-            }   
-        </script> -->
+        <div class='page'>
         <div class='navigate-container'>
             <div class='navigate'>
                 <div class='home'> <a href='/index.html'>Blog Posts</a></div>
@@ -84,5 +82,6 @@
         <p><a href='/bucket-list.html'>Lyd's Bucket List</a></p>
         <p><a href='/about-me.html'>About Lyd</a></p>
         <script src='./demo.js' type="text/javascript"></script>
+        </div>
     </body>
 </html>
