--- a/public/bucket-list.html
+++ b/public/bucket-list.html
@@ -12,13 +12,18 @@
     
     <body>
         <div class='page'>
-        <div class='navigate-container'>
-                <div class='navigate'>
-                    <div class='home'> <a href='/index.html'>Blog Posts</a></div>
-                    <div class='bucket-list'><a href='/bucket-list.html'>Bucket List</a></div>
-                    <div class='about-me'><a href='/about-me.html'>About Me</a></div>
-                </div>
-        </div>
+                <div class='header'>
+                       
+                        <div class='navigate-container'>
+                            <!-- <img class='head-img' src='images/headerback.jpg' width='100%'/> -->
+                            <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
+                            <ul class="navigate-bar">
+                                <li class="navigater"><a href="./bucket-list.html">Bucket List</a></li>
+                                <li class="navigater"><a href="./about.html">About Me</a></li>
+                            </ul>
+                        </div>
+                        <img class='head-img' src='images/headerback.jpg' width='100%'/>
+                </div> <!--close header-->
 
         <h1>Lyd's Bucket List</h1>
         <h2>10 things I wish to do during my Maymester in Europe:</h2>
@@ -34,7 +39,6 @@
             <li><a href='https://www.therooftopguide.com/rooftop-bars-in-copenhagen.html' target='_blank'>Drink at a rooftop bar with a good view of the city</a></li>
             <li><a href='https://www.visitcopenhagen.com/copenhagen/nyhavn-gdk474735' target='_blank'>Visit Nyhavn</a></li>
         </ol>
-        <img/>
         </div>
     </body>
 </html>
