--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                             <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
                             <ul class="navigate-bar">
                                 <li class="navigater"><a href="./bucket-list.html">Bucket List</a></li>
-                                <li class="navigater"><a href="./about.html">About Me</a></li>
+                                <li class="navigater"><a href="./about-me.html">About Me</a></li>
                             </ul>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
