--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,6 @@
         <meta name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
         <link rel='stylesheet' href='styles.css'/>
-        <!-- <style>
-            body {
-            background-color: rgb(128, 128, 223); /* Blue */
-        }
-        </style> -->
     </head>
 
     <body>
@@ -96,6 +91,6 @@
                 </div> <!-- closes post 2-->
             </div> <!--closes content-->
         </div> <!-- closes whole page-->
-        <script src='./demo.js' type="text/javascript"></script>
+        <script src='./dom.js' type="text/javascript"></script> 
     </body>
 </html>
