--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,6 @@
                 </div> <!-- closes post 2-->
             </div> <!--closes content-->
         </div> <!-- closes whole page-->
-        <script src='./dom.js' type="text/javascript"></script> 
+        <script src="./main.ts"></script>
     </body>
 </html>
