--- a/src/about-me.html
+++ b/src/about-me.html
@@ -16,16 +16,18 @@
                         <div class='navigate-container'>
                             <!-- <img class='head-img' src='images/headerback.jpg' width='100%'/> -->
                             <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
-                            <ul class="navigate-bar">
-                                <li class="navigater"><a href="./bucket-list.html">Bucket List</a></li>
-                                <li class="navigater"><a href="./about-me.html">About Me</a></li>
-                            </ul>
+                            <!-- <ul class="navigate-bar"> -->
+                            <div class="navigate-bar">
+                                <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a><a href="./about-me.html">About Me</a></h2>
+                                <!-- <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> -->
+                            <!-- </ul> -->
+                            </div>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
                 </div> <!--close header-->
                 <div class='content'>
                     <h1>About Lyd</h1>
-                    <!-- <img class='floater' src='images/me.jpg' width='400'/> -->
+                    <img class='floater' src='images/me2.jpg' width='400'/>
                     <p>I am a rising senior at UNC double majoring in Computer Science and Information Science with a 
                         minor in Spanish for Business. I have been a COMP110 TA for 3 semesters now and am heavily involved 
                         with the planning of the UNC CS Diversity Panel event at each semester. After my time in Copenhagen, I 
