--- a/src/about-me.html
+++ b/src/about-me.html
@@ -18,8 +18,8 @@
                             <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
                             <!-- <ul class="navigate-bar"> -->
                             <div class="navigate-bar">
-                                <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a><a href="./about-me.html">About Me</a></h2>
-                                <!-- <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> -->
+                                <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
+                                <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
                             <!-- </ul> -->
                             </div>
                         </div>
