--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
                             <div class="navigate-bar">
                                 <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
                                 <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
+                                <h2 class="navigator"><a href="./gallery.html">Photos</h2>
                             </div>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
