--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <title>Lyd's Adventures</title>
         <meta charset='UTF-8'/>
         <meta name='viewport'
-      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+            content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
         <link rel='stylesheet' href='styles.css'/>
     </head>
 
@@ -17,11 +17,10 @@
                         <div class='navigate-container'>
                             <!-- <img class='head-img' src='images/headerback.jpg' width='100%'/> -->
                             <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
-                            <!-- <ul class="navigate-bar"> -->
                             <div class="navigate-bar">
                                 <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
                                 <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
-                                <h2 class="navigator"><a href="./gallery.html">Photos</h2>
+                                <h2 class="navigator"><a href="./gallery.html">Photos</a></h2>
                             </div>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
