--- a/src/about-me.html
+++ b/src/about-me.html
@@ -20,7 +20,7 @@
                             <div class="navigate-bar">
                                 <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
                                 <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
-                            <!-- </ul> -->
+                                <h2 class="navigater"><a href="./gallery.html">Photos</a></h2>
                             </div>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
