better responsive design

--- a/client/bucket-list.html
+++ b/client/bucket-list.html
@@ -14,13 +14,12 @@
         <div class='page'>
                 <div class='header'>
                         <div class='navigate-container'>
-                            <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
-                    
-                            <div class="navigate-bar">
-                                <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
-                                <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
-                                <h2 class="navigater"><a href="./gallery.html">Photos</a></h2>
-                            </div>
+                                <div class="navigate-bar">
+                                        <h2 class="navigater"><a href="./index.html">Blog Posts</a></h2>
+                                        <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
+                                        <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
+                                        <h2 class="navigater"><a href="./gallery.html">Photos</a></h2>
+                                </div>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
                 </div> <!--close header-->
