--- a/client/gallery.html
+++ b/client/gallery.html
@@ -15,12 +15,11 @@
                 <div class='header'>
                         <div class='navigate-container'>
                             <!-- <img class='head-img' src='images/headerback.jpg' width='100%'/> -->
-                            <h1 class="home"><a href="./index.html">Blog Posts</a></h1>
-                            <!-- <ul class="navigate-bar"> -->
                             <div class="navigate-bar">
-                                <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
-                                <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
-                                <h2 class="navigater"><a href="./gallery.html">Photos</a></h2>
+                                    <h2 class="navigater"><a href="./index.html">Blog Posts</a></h2>
+                                    <h2 class="navigater"><a href="./bucket-list.html">Bucket List</a></h2>
+                                    <h2 class="navigater"><a href="./about-me.html">About Me</a></h2> 
+                                    <h2 class="navigater"><a href="./gallery.html">Photos</a></h2>
                             </div>
                         </div>
                         <img class='head-img' src='images/headerback.jpg' width='100%'/>
